--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "author": "Nathan Gaberel <nathan@gnab.fr>",
   "license": "MIT",
   "scripts": {
+    "build": "yarn del && babel lib --out-dir dist",
+    "del": "rimraf dist",
     "pretest": "standard"
   },
   "peerDependencies": {
     "moment": "^2.18.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "rimraf": "^2.6.1",
     "standard": "^10.0.2"
   }
 }
