--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moment-he",
   "version": "0.1.0",
   "description": "Human Era format for moment.js",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:n6g7/moment-he.git",
   "author": "Nathan Gaberel <nathan@gnab.fr>",
   "license": "MIT",
